# face_recognization_wallet

./: .env.sample  Cargo.toml  readme.md
src/: lib.rs  schema.rs
src/controllers/: accounts.rs  controllers.rs  mod.rs
src/databases/: mod.rs  models.rs
src/jwt/: mod.rs
src/routes/: mod.rs
src/utils/: mod.rs
