[package]
name = "cess-rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.6.0"
anyhow = "1.0.86"
bigdecimal = "0.4.3"
cess-rust-sdk = { git = "https://github.com/CESSProject/cess-rust-sdk.git", version="0.1.0", branch="cess-polkadot-v1.1.0-metadata"}
chrono = "0.4.38"
dotenv = "0.15.0"
dotenvy = "0.15.7"
diesel = { version = "2.2.0", features = ["postgres"] }
hex = "0.4.3"
hyper = "1.3.1"
jsonwebtoken = "9.3.0"
lettre = "0.11.7"
log = "0.4.21"
rand = "0.8.5"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
sp-io = "24.0.0"
sp-keyring = "24.0.0"
subxt-signer = "0.37.0"
tokio = { version = "1", features = ["full"] }
web3 = "0.19.0"

[[bin]]
path = "bin/cess-rust-server.rs"
name="cess-rust-server"
